--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -14,7 +14,7 @@
       { name: 'Wes', year: 1988 },
       { name: 'Kait', year: 1986 },
       { name: 'Irv', year: 1970 },
-      { name: 'Lux', year: 2015 }
+      { name: 'Lux', year: 2001 }
     ];
 
     const comments = [
@@ -29,13 +29,29 @@
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
 
+    const somePeople = people.some(person => 
+    2023 - person.year >= 19
+    );
+    console.log(somePeople)
+    const allPeople = people.every(person => 
+    2023 - person.year >= 19
+    )
+    console.log(allPeople)
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const comment = comments.find(comment => comment.id === 823423)
+    console.log(comment.text)
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    const index = comments.findIndex(comment => comment.id === 823423)
+    console.table(comments)
+    comments.splice(index, 1)
+    console.table(comments)
 
   </script>
 </body>
